kubernetes/4.3.2_gateway_api_envoy_gateway_multi_apps/app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: snippet-gatewayapi-demo-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: docker.io/library/nginx:stable-alpine-slim
          name: my-container
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
