kubernetes/4.3.2_gateway_api_envoy_gateway_multi_apps/app1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: snippet-gatewayapi-demo-app1
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
