kubernetes/4.3.2_gateway_api_envoy_gateway_multi_apps/app1/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: snippet-gatewayapi-demo-app1
spec:
  hostnames:
    - "app1.example.com"
  parentRefs:
    - name: my-gateway
      namespace: snippet-gatewayapi-demo-gateway   # Use "gateway-infra" in production
      # The Gateway listener to attach to. Optional here, as "my-gateway" has
      # a single listener, but required as soon as a second one is added (an
      # HTTPS listener, for instance), to pick which one this route attaches to.
      sectionName: http
  rules:
    - backendRefs:
        - name: my-service
          port: 80
      # matches:
      #   - path:
      #       type: PathPrefix
      #       value: /
